add navbar anchor

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,13 +17,14 @@
   <body onload="loadPage()">
     <div id="navigation">
       <div class="nav-item">
-        Introduction
+        <a href="#header">Introduction</a>
       </div>
       <div class="nav-item">
-        Background and Experience
+        <a href="#background">Background and Experience</a>
       </div>
       <div class="nav-item">
-        Personal Projects
+        <a href="#projects">Personal Projects</a>
+        
       </div>
       <div class="nav-item">
         Blog
@@ -184,7 +185,11 @@
         <div id="project-rl" class="project-item">
           <div class="project-info">
             <h3>Reinforcement Learning Atari</h3>
-            <p>Playing Atari with RL.</p>
+            <p>Playing Classic Atari games with RL.</p>
+            <ul>
+              <li><a href="https://github.com/Mckinsey666/Pong-Policy-Gradient">Play Pong with Policy Gradient.</a></li>
+              <li><a href="https://github.com/Mckinsey666/Breakout-Deep-Q-Learning">Play Breakout with Deep Q Learning.</a></li>
+            </ul>
           </div>
           <div class="project-snapshot">
             <img class="rl-img" src="images/projects/breakout.gif">
