--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,7 +20,7 @@
         <a href="#header">Introduction</a>
       </div>
       <div class="nav-item">
-        <a href="#background">Background and Experience</a>
+        <a href="#background">Background</a>
       </div>
       <div class="nav-item">
         <a href="#projects">Personal Projects</a>
@@ -28,6 +28,9 @@
       </div>
       <div class="nav-item">
         Blog
+      </div>
+      <div class="nav-item">
+        Skills
       </div>
       <div class="nav-item">
         Contact
@@ -56,32 +59,52 @@
 
       <div id="background">
         <h2>Backgrounds and Experience</h2>
+        <p>Hover on the logos to see more information.</p>
         <div id="background-timeline">
-          <div class="background-item">
+          <div class="background-item" id="ntu">
             <img class="background-item-img" src="images/background/ntu.png">
             <div class="background-where">National Taiwan University</div>
             <div class="background-title">B.S. in Electrical Engineering</div>
           </div>
-          <div class="background-item">
+          <div class="background-item" id="wq">
             <img class="background-item-img" src="images/background/wq.png">
             <div class="background-where">WorldQuant</div>
             <div class="background-title">Quantitative Finance Research Intern</div>
           </div>
-          <div class="background-item">
+          <div class="background-item" id="vll">
             <img class="background-item-img" src="images/background/ntu.png">
             <div class="background-where">NTU @VLL Lab</div>
             <div class="background-title">Undergraduate Researcher</div>
           </div>
-          <div class="background-item">
+          <div class="background-item" id="eesa">
             <img class="background-item-img" src="images/background/eesa.png">
             <div class="background-where">NTUEE Students' Association</div>
             <div class="background-title">Director of Informa-tion Department</div>
           </div>
-          <div class="background-item">
+          <div class="background-item" id="nehs">
             <img class="background-item-img" src="images/background/nehs.png">
             <div class="background-where">NEHS @Hsinchu Science Park</div>
             <div class="background-title">Class of Scientific Merits</div>
           </div>
+        </div>
+        <div class="background-info" id="background-ntu">
+          <h4>B.S. in Electrical Engineering</h4>
+          <h5 class="background-time">2017/9~Present</h5>
+        </div>
+        <div class="background-info" id="background-wq">
+          <h4>Quantitative Finance Research Intern</h4>
+          <h5 class="background-time">2019/1~2019/2</h5>
+        </div>
+        <div class="background-info" id="background-vll">
+          <h4>Undergraduate Researcher</h4>
+          <h5 class="background-time">2018/7~Present</h5>
+        </div>
+        <div class="background-info" id="background-eesa">
+          <h4>Director of Information Department</h4>
+          <h5 class="background-time">2019/8~2020/6</h5>
+        </div>
+        <div class="background-info" id="background-nehs">
+          
         </div>
       </div>
 
@@ -93,7 +116,7 @@
           at some of my work!
         </p>
         <div style="width: 100%; text-align: center;">
-          <a class="github-button" href="https://github.com/Mckinsey666" data-size="large" data-show-count="true" aria-label="Follow @Mckinsey666 on GitHub">Follow @Mckinsey666</a>
+          <a class="github-button" href="https://github.com/bchao1/" data-size="large" data-show-count="true" aria-label="Follow @bchao1 on GitHub">Follow @bchao1</a>
         </div>
 
         <div id="project-bullet" class="project-item">
@@ -116,7 +139,7 @@
           <div class="project-snapshot">
             <img src="images/projects/bullet-2.gif">
             <img src="images/projects/bullet.gif">
-            <a class="github-button" href="https://github.com/Mckinsey666/bullet" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/bchao1/bullet" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
           </div>
         </div>
         
@@ -135,7 +158,7 @@
           <div class="project-snapshot">
             <img src="images/projects/chart-race.gif">
             <img src="images/projects/chart-race-2.gif">
-            <a class="github-button" href="https://github.com/Mckinsey666/chart-race-react" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/bchao1/chart-race-react" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
           </div>
         </div>
 
@@ -156,7 +179,7 @@
           </div>
           <div class="project-snapshot">
             <img src="images/projects/anime-gen.png">
-            <a class="github-button" href="https://github.com/Mckinsey666/Anime-Generation" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/bchao1/Anime-Generation" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
           </div>
         </div>
 
@@ -167,7 +190,7 @@
           </div>
           <div class="project-snapshot">
             <img src="images/projects/anime-dataset.jpg">
-            <a class="github-button" href="https://github.com/Mckinsey666/Anime-Face-Dataset" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/bchao1/Anime-Face-Dataset" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
           </div>
         </div>
 
@@ -178,7 +201,7 @@
           </div>
           <div class="project-snapshot">
             <img src="images/projects/vocab-2.gif">
-            <a class="github-button" href="https://github.com/Mckinsey666/vocabs" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/bchao1/vocabs" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
           </div>
         </div>
 
@@ -187,8 +210,8 @@
             <h3>Reinforcement Learning Atari</h3>
             <p>Playing Classic Atari games with RL.</p>
             <ul>
-              <li><a href="https://github.com/Mckinsey666/Pong-Policy-Gradient">Play Pong with Policy Gradient.</a></li>
-              <li><a href="https://github.com/Mckinsey666/Breakout-Deep-Q-Learning">Play Breakout with Deep Q Learning.</a></li>
+              <li><a href="https://github.com/bchao1/Pong-Policy-Gradient">Play Pong with Policy Gradient.</a></li>
+              <li><a href="https://github.com/bchao1/Breakout-Deep-Q-Learning">Play Breakout with Deep Q Learning.</a></li>
             </ul>
           </div>
           <div class="project-snapshot">
