add fetch music urls to blog

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,7 +27,7 @@
         
       </div>
       <div class="nav-item">
-        Blog
+        <a href="blog/index.html">Blog</a>
       </div>
       <div class="nav-item">
         Skills
